--- a/about.html
+++ b/about.html
@@ -8,23 +8,24 @@
     <script src="material.min.js"></script>
     <link rel="stylesheet" href="material.indigo-blue.min.css" />
     <link rel="stylesheet" href="js/materialdesign/css/materialdesign.css" type="text/css" />
-    <script src="js/jquery/jquery-3.1.0.min.js" onload="window.$ = window.jQuery = module.exports;"></script>    
+    <script src="js/jquery/jquery-3.1.0.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
     <script src="js/jquery/autoTooltip.plugin.jQuery.min.js"></script>
     <style>
-@font-face {
-font-family: "Roboto";
-src: url('fonts/Roboto.ttf');
-}
+        @font-face {
+            font-family: "Roboto";
+            src: url('fonts/Roboto.ttf');
+        }
 
-@font-face {
-font-family: Roboto-Medium;
-src: url('fonts/Roboto-Medium.ttf');
-}
+        @font-face {
+            font-family: Roboto-Medium;
+            src: url('fonts/Roboto-Medium.ttf');
+        }
 
-@font-face {
-font-family: Roboto-Light;
-src: url('fonts/Roboto-Light.ttf');
-}
+        @font-face {
+            font-family: Roboto-Light;
+            src: url('fonts/Roboto-Light.ttf');
+        }
+
         .titlebar {
             height: 32px;
             width: 100%;
@@ -48,7 +49,10 @@ src: url('fonts/Roboto-Light.ttf');
             background-color: rgba(0, 0, 0, 0.1);
         }
 
-        h3, p, h5, i {
+        h3,
+        p,
+        h5,
+        i {
             -webkit-touch-callout: none;
             -webkit-user-select: none;
             -moz-user-select: none;
@@ -286,7 +290,7 @@ src: url('fonts/Roboto-Light.ttf');
         }
         /*# sourceMappingURL=normalize.min.css.map */
 
-                .tooltip {
+        .tooltip {
             background: rgba(80, 80, 80, .9);
             color: #fff;
             z-index: 999999;
@@ -444,10 +448,10 @@ src: url('fonts/Roboto-Light.ttf');
         <div class="titlebar" id="titlebar">
             <div class="draggable">
             </div>
-            <div data-tooltip-text="Close" data-tooltip-position="bottom" class="windowbutton windowbutton-close"></div>
-            <div data-tooltip-text="Maximize" data-tooltip-position="bottom" class="windowbutton windowbutton-maximize"></div>
-            <div data-tooltip-text="Minimize" data-tooltip-position="bottom" class="windowbutton windowbutton-minimize"></div>
-            <div data-tooltip-text="Feedback" data-tooltip-position="bottom" class="windowbutton windowbutton-feedback"></div>
+            <div title="Close" class="windowbutton windowbutton-close"></div>
+            <div title="Maximize" class="windowbutton windowbutton-maximize"></div>
+            <div title="Minimize" class="windowbutton windowbutton-minimize"></div>
+            <div title="Feedback" class="windowbutton windowbutton-feedback"></div>
             <div class="border5"></div>
         </div>
         </script>
@@ -456,52 +460,52 @@ src: url('fonts/Roboto-Light.ttf');
             <p style="margin-top: 10px;">a browser built exclusively for Vietnamese community with many features and fast page loading speed.</p>
             <h5 style="margin-bottom: 10px;">Version Infomation</h5>
             <ul class="demo-list-two mdl-list">
-                    <li class="mdl-list__item mdl-list__item--two-line">
-                      <span class="mdl-list__item-primary-content">
+                <li class="mdl-list__item mdl-list__item--two-line">
+                    <span class="mdl-list__item-primary-content">
                         <span>KT Browser</span>
-                        <span id="ktbrowserver" class="mdl-list__item-sub-title"></span>
-                      </span>
-                      <span class="mdl-list__item-secondary-content">
+                    <span id="ktbrowserver" class="mdl-list__item-sub-title"></span>
+                    </span>
+                    <span class="mdl-list__item-secondary-content">
                         <a class="mdl-list__item-secondary-action" onclick="shell.openExternal('https://github.com/KTTECHTeam/KT-Browser');"><i class="material-icons">code</i></a>
                       </span>
-                    </li>
-                    <li class="mdl-list__item mdl-list__item--two-line">
-                      <span class="mdl-list__item-primary-content">
+                </li>
+                <li class="mdl-list__item mdl-list__item--two-line">
+                    <span class="mdl-list__item-primary-content">
                         <span>Electron</span>
-                        <span id="electronver" class="mdl-list__item-sub-title"></span>
-                      </span>
-                      <span class="mdl-list__item-secondary-content">
+                    <span id="electronver" class="mdl-list__item-sub-title"></span>
+                    </span>
+                    <span class="mdl-list__item-secondary-content">
                         <a class="mdl-list__item-secondary-action" onclick="shell.openExternal('https://github.com/electron/electron');"><i class="material-icons">code</i></a>
                       </span>
-                    </li>
-                    <li class="mdl-list__item mdl-list__item--two-line">
-                      <span class="mdl-list__item-primary-content">
+                </li>
+                <li class="mdl-list__item mdl-list__item--two-line">
+                    <span class="mdl-list__item-primary-content">
                         <span>NodeJS</span>
-                        <span id="nodever" class="mdl-list__item-sub-title"></span>
-                      </span>
-                      <span class="mdl-list__item-secondary-content">
+                    <span id="nodever" class="mdl-list__item-sub-title"></span>
+                    </span>
+                    <span class="mdl-list__item-secondary-content">
                         <a class="mdl-list__item-secondary-action" onclick="shell.openExternal('https://nodejs.org');"><i class="material-icons">code</i></a>
                       </span>
-                    </li>
-                    <li class="mdl-list__item mdl-list__item--two-line">
-                        <span class="mdl-list__item-primary-content">
+                </li>
+                <li class="mdl-list__item mdl-list__item--two-line">
+                    <span class="mdl-list__item-primary-content">
                           <span>libchromiumcontent</span>
-                          <span id="chromiumver" class="mdl-list__item-sub-title"></span>
-                        </span>
-                        <span class="mdl-list__item-secondary-content">
+                    <span id="chromiumver" class="mdl-list__item-sub-title"></span>
+                    </span>
+                    <span class="mdl-list__item-secondary-content">
                           <a class="mdl-list__item-secondary-action" onclick="shell.openExternal('https://www.chromium.org/');"><i class="material-icons">code</i></a>
                         </span>
-                    </li>
-                    <li class="mdl-list__item mdl-list__item--two-line">
-                        <span class="mdl-list__item-primary-content">
+                </li>
+                <li class="mdl-list__item mdl-list__item--two-line">
+                    <span class="mdl-list__item-primary-content">
                           <span>v8</span>
-                          <span id="v8ver" class="mdl-list__item-sub-title"></span>
-                        </span>
-                        <span class="mdl-list__item-secondary-content">
+                    <span id="v8ver" class="mdl-list__item-sub-title"></span>
+                    </span>
+                    <span class="mdl-list__item-secondary-content">
                           <a class="mdl-list__item-secondary-action" onclick="shell.openExternal('https://github.com/v8/v8');"><i class="material-icons">code</i></a>
                         </span>
-                    </li>
-                  </ul>
+                </li>
+            </ul>
 
         </div>
     </div>
@@ -517,7 +521,7 @@ src: url('fonts/Roboto-Light.ttf');
             if (window.module) module = window.module;
         </script>
         <script>
-            Array.prototype.forEach || (Array.prototype.forEach = function (r, t) {
+            Array.prototype.forEach || (Array.prototype.forEach = function(r, t) {
                 var o, n;
                 if (null === this) throw new TypeError(" this is null or not defined");
                 var e = Object(this),
@@ -531,22 +535,24 @@ src: url('fonts/Roboto-Light.ttf');
         </script>
         <script src="js/materialdesign/materialdesign.js"></script>
         <script>
-            const {remote} = require('electron')
+            const {
+                remote
+            } = require('electron')
             const shell = require('electron').shell;
-            $('.windowbutton-close').click(function () {
+            $('.windowbutton-close').click(function() {
                 remote.getCurrentWindow().close();
             });
-            $('.windowbutton-maximize').click(function () {
+            $('.windowbutton-maximize').click(function() {
                 if (remote.getCurrentWindow().isMaximized()) {
                     remote.getCurrentWindow().unmaximize();
                 } else {
                     remote.getCurrentWindow().maximize();
                 }
             });
-            $('.windowbutton-minimize').click(function () {
+            $('.windowbutton-minimize').click(function() {
                 remote.getCurrentWindow().minimize();
             });
-            $('.windowbutton-feedback').click(function () {
+            $('.windowbutton-feedback').click(function() {
                 shell.openExternal("mailto:admin@kt-browser.com");
             });
             document.getElementById("ktbrowserver").innerHTML = remote.app.getVersion()
