--- a/window.html
+++ b/window.html
@@ -54,9 +54,9 @@
         <div class="titlebar" id="titlebar">
             <div class="draggable">
             </div>
-            <div data-tooltip-text="Close" data-tooltip-position="bottom" class="ripple windowbutton windowbutton-close"></div>
-            <div data-tooltip-text="Maximize" data-tooltip-position="bottom" class="windowbutton windowbutton-maximize"></div>
-            <div data-tooltip-text="Minimize" data-tooltip-position="bottom" class="windowbutton windowbutton-minimize"></div>
+            <div title="Close" class="ripple windowbutton windowbutton-close"></div>
+            <div title="Maximize" class="windowbutton windowbutton-maximize"></div>
+            <div title="Minimize" class="windowbutton windowbutton-minimize"></div>
             <div class="border5"></div>
         </div>
         </script>
@@ -82,7 +82,7 @@
                 if (window.module) module = window.module;
             </script>
             <script>
-                Array.prototype.forEach || (Array.prototype.forEach = function (r, t) {
+                Array.prototype.forEach || (Array.prototype.forEach = function(r, t) {
                     var o, n;
                     if (null === this) throw new TypeError(" this is null or not defined");
                     var e = Object(this),
@@ -95,22 +95,22 @@
                 });
             </script>
             <script>
-                ! function (e, n) {
-                    var t = function (e) {
+                ! function(e, n) {
+                    var t = function(e) {
                             var n = e.data[0],
                                 t = e.data[1],
                                 a = n.buttons[t].callback;
                             p(n), "function" == typeof a && a.call(this, e)
                         },
-                        a = function (e) {
+                        a = function(e) {
                             e.blend ? e.$wrapper.fadeIn(e.blendDuration) : e.$wrapper.show()
                         },
-                        p = function (e) {
-                            e.blend ? e.$wrapper.fadeOut(e.blendDuration, function () {
+                        p = function(e) {
+                            e.blend ? e.$wrapper.fadeOut(e.blendDuration, function() {
                                 e.$wrapper.remove()
                             }) : e.$wrapper.remove()
                         },
-                        s = function (p) {
+                        s = function(p) {
                             var s = e('<div class="mb-outerWrapper">'),
                                 o = e('<div class="mb-innerWrapper">').appendTo(s),
                                 d = e('<div class="mb">').appendTo(o),
@@ -120,11 +120,11 @@
                                 l = e('<div class="mb-message">'),
                                 b = e('<div class="mb-buttons">').appendTo(d);
                             p.$wrapper = s, p.type !== n && c.append(r.addClass("icon-" + p.type)), c.append(l), i.text(
-                                p.title), l.text(p.message), p.buttons.forEach(function (n, a) {
+                                p.title), l.text(p.message), p.buttons.forEach(function(n, a) {
                                 e('<div class="mb-button">').text(n.text).on("click", [p, a], t).appendTo(b)
                             }), s.hide(), this.append(s), a(p)
                         };
-                    e.fn.msgBox = function (n) {
+                    e.fn.msgBox = function(n) {
                         s.call(this, e.extend(!0, {
                             title: "",
                             message: "",
@@ -145,17 +145,17 @@
                 const {
                     app
                 } = require('electron').remote;
-                $('.windowbutton-close').click(function () {
+                $('.windowbutton-close').click(function() {
                     remote.getCurrentWindow().close();
                 });
-                $('.windowbutton-maximize').click(function () {
+                $('.windowbutton-maximize').click(function() {
                     if (remote.getCurrentWindow().isMaximized()) {
                         remote.getCurrentWindow().unmaximize();
                     } else {
                         remote.getCurrentWindow().maximize();
                     }
                 });
-                $('.windowbutton-minimize').click(function () {
+                $('.windowbutton-minimize').click(function() {
                     remote.getCurrentWindow().minimize();
                 });
             </script>
