--- a/settings.html
+++ b/settings.html
@@ -398,6 +398,11 @@
                         <span class="mdl-switch__label">Use hardware acceleration when available</span>
                         <input type="checkbox" id="hardalc" class="mdl-switch__input">
                 </label>
+                <br></br>
+                <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="gpu">
+                        <span class="mdl-switch__label">Force GPU rendering</span>
+                        <input type="checkbox" id="gpu" class="mdl-switch__input">
+                </label>
             </div>
             <br></br>
         </div>
@@ -465,7 +470,8 @@
             allowImage.checked = settings.get("settings.allowImage")
             DNT.checked = settings.get("settings.DNT")
             blockUnsafeWeb.checked = settings.get("settings.blockUnsafeWeb")
-
+            gpu.checked = settings.get("settings.gpu")
+            
                 ! function() {
                     "use strict";
                     var e = function(e) {
@@ -678,7 +684,8 @@
                     allowScript: allowScript.checked,
                     allowImage: allowImage.checked,
                     DNT: DNT.checked,
-                    blockUnsafeWeb: blockUnsafeWeb.checked
+                    blockUnsafeWeb: blockUnsafeWeb.checked,
+                    gpu: gpu.checked
                 })
             }
 
